Offer process menu even for zombies

It has been brought to my attention that even zombies may be
 sometimes running processes, particularly when a normal process does
 pthread_exit() in its main thread. Therefore, it should be possible
 to lower their priority or kill them by signal. Although the latter
 is still possible with the delete key, I think it is better that the
 normal context menu is also provided.

BUG: 353575